--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.1.2",
+    "@clerk/themes": "^2.1.7",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "mongoose": "^8.3.4",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
