--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "sharp": "^0.33.2",
